--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,12 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Chat App</title>
         <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
-        <link rel="import" href="./src/my-app/my-app.html">
+        <!-- <link rel="import" href="chat-app/chat-app.html"> -->
     </head>
     <body>
-        <my-app></my-app>
+        <!-- <chat-app></chat-app> -->
     </body>
 </html>
