--- a/src/my-app/login-page.html
+++ b/src/my-app/login-page.html
@@ -10,12 +10,38 @@
 
     <h1>Login Page</h1>
     <!-- Your login page content here -->
+    <div>
+        <label for="username">Username:</label>
+        <input id="username" type="text" value="{{username}}">
+      </div>
+      <div>
+        <label for="password">Password:</label>
+        <input id="password" type="password" value="{{password}}">
+      </div>
+      <button on-click="_login">Login</button>
   </template>
 
   <script>
     class LoginPage extends Polymer.Element {
       static get is() {
         return 'login-page';
+      }
+      static get properties() {
+        return {
+          username: {
+            type: String,
+            value: ''
+          },
+          password: {
+            type: String,
+            value: ''
+          }
+        };
+      }
+
+      _login() {
+        
+        // Handle login logic
       }
     }
 
