--- a/src/my-app/my-app.html
+++ b/src/my-app/my-app.html
@@ -2,6 +2,8 @@
 <link rel="import" href="../../bower_components/app-route/app-location.html">
 <link rel="import" href="../../bower_components/app-route/app-route.html">
 <link rel="import" href="../../bower_components/iron-pages/iron-pages.html">
+<link rel="import" href="./login-page.html">
+<link rel="import" href="./chat-page.html">
 
 <dom-module id="my-app">
   <template>
@@ -21,8 +23,8 @@
     ></app-route>
 
     <iron-pages selected="[[routeData.page]]" attr-for-selected="name">
-      <login-page name="login"></login-page>
-      <chat-page name="chat"></chat-page>
+        <login-page name="login"></login-page>
+        <chat-page name="chat"></chat-page>
     </iron-pages>
   </template>
 
