--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,12 +5,12 @@
     </head>
     <body>
         <form>
-            <label for="username">userame:</label>
+            <label for="username">username:</label>
             <input type="text" id="username">
             <br>
             <button type="button" onclick="login()">Login</button>
         </form>
-        <script src="client.js">
+        <script src="login-page/login.js">
         </script>
     </body>
 </html>
