Divide chatpage into userlist and chatboard

--- a/server/public/chat-page/index.html
+++ b/server/public/chat-page/index.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <link rel="stylesheet" href="chat-page.css">
+    </head>
     <body>
         <h1>Start chat</h1>
+        <div class="chat-page">
+            <div id = "userlist">
+                adfdf
+            </div>
+            <div id = "chatboard">
+                <input type="text">
+                <button>send</button>
+            </div>
+        </div>
         <script src = "chat.js"></script>
     </body>
 </html>
