Send Message on Client

--- a/server/public/chat-page/index.html
+++ b/server/public/chat-page/index.html
@@ -7,10 +7,10 @@
         <h1>Start chat</h1>
         <div class="chat-page">
             <div id = "userlist">
-                adfdf
+                UserList
             </div>
             <div id = "chatboard">
-                <input type="text">
+                <input type="text" id="message">
                 <button>send</button>
             </div>
         </div>
