Send Message between users

--- a/server/public/chat-page/index.html
+++ b/server/public/chat-page/index.html
@@ -11,7 +11,7 @@
             </div>
             <div id = "chatboard">
                 <input type="text" id="message">
-                <button>send</button>
+                <button onclick="sendMessage()">send</button>
             </div>
         </div>
         <script src = "chat.js"></script>
