Message collection in db

--- a/server/public/login-page/index.html
+++ b/server/public/login-page/index.html
@@ -8,7 +8,7 @@
             <label for="username">userame:</label>
             <input type="text" id="username">
             <br>
-            <button type="button">Login</button>
+            <button type="button" onclick="login()">Login</button>
         </form>
         <script src="login.js"></script>
     </body>
