--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <head>
-    </head>
-    <body>
-        <form>
-            <label for="username">username:</label>
-            <input type="text" id="username">
-            <br>
-            <button type="button" onclick="login()">Login</button>
-        </form>
-        <script src="login-page/login.js">
-        </script>
-    </body>
-</html>
 
+<head>
+    <link rel="stylesheet" href="login-page/login-page.css">
+</head>
+
+<body>
+    <div class="container">
+        <form class="login-panel">
+            <div class="form-group">
+                <label for="username" class="text-light">User Name </label>
+                <input type="text" id="username">
+            </div>
+            <div class="form-group">
+                <button type="button" class="login-btn" onclick="login()">Login</button>
+            </div>
+        </form>
+    </div>
+    <script src="login-page/login.js">
+    </script>
+</body>
+
+</html>
