--- a/server/public/login-page/index.html
+++ b/server/public/login-page/index.html
@@ -4,8 +4,8 @@
         
     </head>
     <body>
-        <form>
-            <label for="username">userame:</label>
+        <form class="login-panel">
+            <label for="username">User Name:</label>
             <input type="text" id="username">
             <br>
             <button type="button" onclick="login()">Login</button>
